--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ buildscript {
         maven { url "https://maven.aliyun.com/repository/jcenter" }
         maven { url 'https://plugins.gradle.org/m2/' }
         maven { url 'https://maven.fabric.io/public' }
+//        mavenLocal()
+//        maven { url uri('repo')}
     }
     ext {
         compileSdkVersion = 28
@@ -56,6 +58,7 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.2'
         classpath 'io.fabric.tools:gradle:1.28.1'
         classpath 'com.google.firebase:perf-plugin:1.3.1'
+        classpath 'com.hawksjamesf.plugin:perf:1.0.0'
 //        classpath 'com.google.firebase:firebase-plugins:1.1.5'
         classpath ("com.tencent.matrix:matrix-gradle-plugin:0.6.0") { changing = true }
     }
@@ -69,6 +72,8 @@ allprojects {
         maven { url "https://maven.aliyun.com/repository/jcenter" }
         maven { url 'https://plugins.gradle.org/m2/' }
         maven { url 'https://maven.fabric.io/public' }
+//        mavenLocal()
+//        maven { url uri('repo') }
 
     }
 }
