--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         maven { url "https://maven.aliyun.com/repository/jcenter" }
         maven { url 'https://plugins.gradle.org/m2/' }
         maven { url 'https://maven.fabric.io/public' }
-//        mavenLocal()
+        mavenLocal()
 //        maven { url uri('repo')}
     }
     ext {
@@ -72,7 +72,7 @@ allprojects {
         maven { url "https://maven.aliyun.com/repository/jcenter" }
         maven { url 'https://plugins.gradle.org/m2/' }
         maven { url 'https://maven.fabric.io/public' }
-//        mavenLocal()
+        mavenLocal()
 //        maven { url uri('repo') }
 
     }
