--- a/uicomponent/src/main/AndroidManifest.xml
+++ b/uicomponent/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <!--        singleTask(Intent.FLAG_ACTIVITY_NEW_TASK or Intent.FLAG_ACTIVITY_CLEAR_TOP)：如果存在FourthActivity，则清除FourthActivity之上的Activity并且推至顶部-->
         <!--            android:launchMode="singleTask" -->
         <activity android:name="com.hawksjamesf.uicomponent.FourthActivity" />
+        <activity android:name="com.hawksjamesf.uicomponent.FragmentNotAttachActivity" />
 
     </application>
 </manifest>
