--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         maven { url 'https://plugins.gradle.org/m2/' }
         maven { url 'https://maven.fabric.io/public' }
         mavenLocal()
-//        maven { url uri('repo')}
+        maven { url uri("$rootDir/repo")}
     }
     ext {
         compileSdkVersion = 28
@@ -73,9 +73,9 @@ allprojects {
         maven { url 'https://plugins.gradle.org/m2/' }
         maven { url 'https://maven.fabric.io/public' }
         mavenLocal()
-//        maven { url uri('repo') }
-
+        maven { url uri("$rootDir/repo")}
     }
+
 }
 
 task clean(type: Delete) {
@@ -86,6 +86,5 @@ task clean(type: Delete) {
 //    println("hello world")
 //
 //}
-
 
 println("root project end")
