--- a/uicomponent/build.gradle
+++ b/uicomponent/build.gradle
@@ -17,6 +17,7 @@ def srcDirs = [
         "bottomupDialog",
         "launchmode",
         "fragmentx",
+        "testStyle",
 
 ]
 android {
@@ -82,12 +83,12 @@ dependencies {
      * ================================ui start=====================================
      */
     api "androidx.recyclerview:recyclerview:1.0.0"
-    api 'android.arch.navigation:navigation-fragment:1.0.0-alpha11'
-    api 'android.arch.navigation:navigation-ui:1.0.0-alpha11'
-    api 'android.arch.navigation:navigation-common-ktx:1.0.0-alpha11'
-    api 'android.arch.navigation:navigation-runtime-ktx:1.0.0-alpha11'
-    api 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha11'
-    api 'android.arch.navigation:navigation-ui-ktx:1.0.0-alpha11'
+    api 'androidx.navigation:navigation-fragment:2.0.0-rc02'
+    api 'androidx.navigation:navigation-ui:2.0.0-rc02'
+    api 'androidx.navigation:navigation-common-ktx:2.0.0-rc02'
+    api 'androidx.navigation:navigation-runtime-ktx:2.0.0-rc02'
+    api 'androidx.navigation:navigation-fragment-ktx:2.0.0-rc02'
+    api 'androidx.navigation:navigation-ui-ktx:2.0.0-rc02'
 
     //layout start
     api 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -132,6 +133,11 @@ dependencies {
     api 'com.firebaseui:firebase-ui-firestore:6.0.2'
     api 'com.firebaseui:firebase-ui-auth:6.0.2'
     api 'com.firebaseui:firebase-ui-storage:6.0.2'
+
+    api 'androidx.emoji:emoji:1.0.0'
+    api 'androidx.emoji:emoji-appcompat:1.0.0'
+    api 'androidx.emoji:emoji-bundled:1.0.0'
+
     /**
      * ================================ui end=====================================
      */
