--- a/common/build.gradle
+++ b/common/build.gradle
@@ -226,6 +226,8 @@ dependencies {
     api 'com.google.firebase:firebase-core:17.2.0'
     api 'com.google.firebase:firebase-perf:19.0.1'
     api 'com.google.firebase:firebase-config:19.0.2'
+    api 'com.google.firebase:firebase-storage:19.1.0'
+    api 'com.google.firebase:firebase-storage-ktx:19.1.0'
 
     api 'com.facebook.stetho:stetho:1.5.1'
     api 'com.facebook.stetho:stetho-js-rhino:1.5.1'
