--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: openjdk:8-jdk
 variables:
   ANDROID_COMPILE_SDK: "29"
   ANDROID_BUILD_TOOLS: "29.0.2"
-#  ANDROID_SDK_TOOLS:   "4333796"
+  ANDROID_SDK_TOOLS:   "4333796"
 
 before_script:
   - apt-get --quiet update --yes
