--- a/uicomponent/build.gradle
+++ b/uicomponent/build.gradle
@@ -95,7 +95,7 @@ dependencies {
     api 'androidx.navigation:navigation-ui-ktx:2.0.0-rc02'
 
     //layout start
-    api 'androidx.constraintlayout:constraintlayout:1.1.3'
+    api 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
     api 'com.google.android:flexbox:1.1.0'
     //layout end
 
