--- a/uicomponent/src/main/AndroidManifest.xml
+++ b/uicomponent/src/main/AndroidManifest.xml
@@ -66,5 +66,6 @@
             android:supportsPictureInPicture="true"
             android:theme="@style/VideoTheme" />
         <activity android:name=".PhotoListActivity"/>
+        <activity android:name=".LargePhotoActivity"/>
     </application>
 </manifest>
