--- a/common/build.gradle
+++ b/common/build.gradle
@@ -251,7 +251,8 @@ dependencies {
      */
     api "com.github.bumptech.glide:glide:4.10.0"
     kapt "com.github.bumptech.glide:compiler:4.10.0"
-    api 'androidx.exifinterface:exifinterface:1.1.0-rc01'
+    api 'androidx.exifinterface:exifinterface:1.1.0'
+    api "com.github.bumptech.glide:recyclerview-integration:4.9.0"
     /**
      * ===============================image end=============================
      */
