--- a/storage/src/main/AndroidManifest.xml
+++ b/storage/src/main/AndroidManifest.xml
@@ -3,5 +3,8 @@
 
     <application>
         <activity android:name=".FirebaseDatabaseActivity" />
+        <activity
+            android:name=".LogDBActivity"
+            android:theme="@style/Theme.AppCompat.DayNight" />
     </application>
 </manifest>
