--- a/uicomponent/src/main/AndroidManifest.xml
+++ b/uicomponent/src/main/AndroidManifest.xml
@@ -69,7 +69,7 @@
         <activity android:name=".LargePhotoActivity" />
         <activity
             android:name=".SearchActivity"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
             android:windowSoftInputMode="adjustPan|stateHidden" />
     </application>
 </manifest>
