--- a/storage/src/main/AndroidManifest.xml
+++ b/storage/src/main/AndroidManifest.xml
@@ -6,5 +6,9 @@
         <activity
             android:name=".LogDBActivity"
             android:theme="@style/Theme.AppCompat.DayNight" />
+        <provider
+            android:authorities="com.hawksjamesf.storage.log"
+            android:exported="false"
+            android:name="LogContentProvider"/>
     </application>
 </manifest>
