--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -2,4 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.hawksjamesf.common">
 
+    <application >
+        <activity android:name="com.hawksjamesf.common.YPoseActivity"/>
+    </application>
 </manifest>
