--- a/network/build.gradle
+++ b/network/build.gradle
@@ -102,20 +102,20 @@ android {
 
         }
     }
-    flavorDimensions "data_access"
-    productFlavors {
-        mocked {
-            dimension 'data_access'
-            buildConfigField 'boolean', 'MOCKED_DATA_ACCESS', 'true'
-            buildConfigField 'String', 'WEATHER_URL', '" "'
-
-        }
-        real {
-            dimension 'data_access'
-            buildConfigField 'boolean', 'MOCKED_DATA_ACCESS', 'false'
-            buildConfigField 'String', 'WEATHER_URL', '"https://api.openweathermap.org"'
-
-        }
+//    flavorDimensions "data_access"
+//    productFlavors {
+//        mocked {
+//            dimension 'data_access'
+//            buildConfigField 'boolean', 'MOCKED_DATA_ACCESS', 'true'
+//            buildConfigField 'String', 'WEATHER_URL', '" "'
+//
+//        }
+//        real {
+//            dimension 'data_access'
+//            buildConfigField 'boolean', 'MOCKED_DATA_ACCESS', 'false'
+//            buildConfigField 'String', 'WEATHER_URL', '"https://api.openweathermap.org"'
+//
+//        }
 //
 //        realLocalServer{
 //            dimension 'data_access'
@@ -124,7 +124,7 @@ android {
 //        }
         println("getLocalIP--->${getLocalIP()}")
 
-    }
+//    }
 }
 
 static String getLocalIP() {
