--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -9,7 +9,14 @@ cmake_minimum_required(VERSION 3.4.1)
 # or SHARED, and provides the relative paths to its source code.
 # You can define multiple libraries, and CMake builds them for you.
 # Gradle automatically packages shared libraries with your APK.
+add_library( # Sets the name of the library.
+        hawks
 
+        # Sets the library as a shared library.
+        SHARED
+
+        # Provides a relative path to your source file(s).
+        ypose/main/jni/hawks.cpp)
 add_library( # Sets the name of the library.
              native-lib
 
@@ -17,7 +24,7 @@ add_library( # Sets the name of the library.
              SHARED
 
              # Provides a relative path to your source file(s).
-             src/main/cpp/native-lib.cpp )
+        ypose/main/jni/native-lib.cpp)
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
