--- a/common/build.gradle
+++ b/common/build.gradle
@@ -27,6 +27,7 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags "-std=c++14"
+                targets "hawks","native-lib"
             }
         }
 
