--- a/common/ypose/main/jni/nativelib/CMakeLists.txt
+++ b/common/ypose/main/jni/nativelib/CMakeLists.txt
@@ -31,6 +31,7 @@ find_library( # Sets the name of the path variable.
         # you want CMake to locate.
         log )
 
+target_include_directories(native-lib PRIVATE logutil.h ../hawks/include)
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in this
 # build script, prebuilt third-party libraries, or system libraries.
