--- a/app/build.gradle
+++ b/app/build.gradle
@@ -293,6 +293,7 @@ dependencies {
     implementation project(path: ':uicomponent')
     implementation project(path: ':common')
     implementation project(path: ':login')
+    implementation project(path: ':image')
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "com.google.dagger:dagger-compiler:2.16"
     kapt "com.google.dagger:dagger-android-processor:2.16"
