--- a/image/build.gradle
+++ b/image/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/testlib.gradle"
 
@@ -70,8 +71,16 @@ dependencies {
     /**
      * ===============================image start=============================
      */
-    api "com.github.bumptech.glide:glide:${rootProject.ext.glideVersion}"
-    annotationProcessor "com.github.bumptech.glide:compiler:${rootProject.ext.glideVersion}"
+    api "com.github.bumptech.glide:glide:4.10.0"
+    kapt "com.github.bumptech.glide:compiler:4.10.0"
+    api 'androidx.exifinterface:exifinterface:1.1.0'
+    api "com.github.bumptech.glide:recyclerview-integration:4.9.0"
+
+    api 'com.facebook.fresco:fresco:0.12.0'
+    api 'com.facebook.fresco:animated-gif:0.12.0'
+    // 支持 WebP （静态图+动图），需要添加
+    api 'com.facebook.fresco:animated-webp:0.12.0'
+    api 'com.facebook.fresco:webpsupport:0.12.0'
     /**
      * ===============================image end=============================
      */
