--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ buildscript {
         loggerVersion = '2.1.1'
         utilcodeVersion = '1.11.1'
         daggerVersion = '2.15'
-        realmVersion = '5.7.0'
+        realmVersion = 'io.realm:realm-annotations:5.7.0'
         leakcanaryVersion = '1.6.2'
         grpcVersion = '1.20.0'
     }
@@ -61,6 +61,7 @@ buildscript {
         classpath 'com.hawksjamesf.plugin:perf:1.0.0'
 //        classpath 'com.google.firebase:firebase-plugins:1.1.5'
         classpath ("com.tencent.matrix:matrix-gradle-plugin:0.6.0") { changing = true }
+//        classpath 'com.tencent.bugly:symtabfileuploader:1.3.7'
     }
 }
 
