--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -25,9 +25,11 @@ sourceSets {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation gradleApi()
     implementation localGroovy()
     implementation "com.android.tools.build:gradle:3.5.2"
+//    implementation files('libs\\buglySymbolAndroid2.3.1.jar')
 //    implementation "org.javassist:javassist:3.20.0-GA"
 //    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
 }
