--- a/ypose/build.gradle
+++ b/ypose/build.gradle
@@ -21,6 +21,13 @@ android {
                 cppFlags "-std=c++14"
             }
         }
+        ndk {
+//             设置支持的SO库架构
+            abiFilters 'x86_64'
+            abiFilters 'x86'
+            abiFilters 'armeabi-v7a'
+            abiFilters 'arm64-v8a'
+        }
 
     }
     externalNativeBuild {
