--- a/mockserver/src/main/AndroidManifest.xml
+++ b/mockserver/src/main/AndroidManifest.xml
@@ -6,5 +6,17 @@
             android:name=".MockService"
             android:process=":mock_server"
             />
+        <activity
+            android:name="com.hawksjamesf.mockserver.LogDBActivity"
+            android:theme="@style/Theme.AppCompat.DayNight" />
+        <provider
+            android:authorities="${applicationId}.mockserver.log"
+            android:exported="false"
+            android:name="com.hawksjamesf.mockserver.LogContentProvider"/>
+        <provider
+            android:authorities="${applicationId}.mockserver.mocker"
+            android:exported="false"
+            android:name="com.hawksjamesf.mockserver.MockServerContentProvider"/>
+<!--            android:multiprocess="true"-->
     </application>
 </manifest>
