--- a/mockserver/build.gradle
+++ b/mockserver/build.gradle
@@ -62,6 +62,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     api project(path: ':common')
-    api "com.squareup.okhttp3:mockwebserver:${rootProject.ext.okhttpVersion}"
+    api "com.squareup.okhttp3:mockwebserver:4.0.1"
     api "com.squareup.retrofit2:retrofit-mock:${rootProject.ext.retrofitVersion}"
 }
