--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -4,11 +4,17 @@ apply plugin: 'kotlin-kapt'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.squareup:javapoet:1.9.0'
+    implementation 'com.squareup:javapoet:1.10.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.50"
     implementation project(path: ':annotations')
     implementation 'com.squareup:kotlinpoet:1.0.0'
+    implementation 'junit:junit:4.13-beta-3'
     implementation 'com.google.auto.service:auto-service:1.0-rc4'
+    testImplementation ("com.google.testing.compile:compile-testing:0.10") {
+        // We don't use this and including it requires us to list it separatel which would be
+        // confusing.
+        exclude group: "com.google.auto.value", module: "auto-value"
+    }
 }
 
 sourceCompatibility = "7"
