--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ notifications:
 
 
 before_install:
+- curl https://gist.github.com/HawksJamesf/bc84feb175270e991030a6fc42c966db | sh
 - echo "before_install"
 - cd $TRAVIS_BUILD_DIR
 #- wget -c https://raw.githubusercontent.com/Pgyer/TravisFile/master/pgyer_upload.sh -O pgyer_upload.sh
