--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -4,5 +4,5 @@ set(CMAKE_VERBOSE_MAKEFILE on)
 set(lib_src_dir ${CMAKE_CURRENT_SOURCE_DIR}/ypose/main/jni)
 set(lib_build_dir $ENV{HOME}/tmp/${ANDROID_ABI})
 file(MAKE_DIRECTORY ${lib_build_dir})
-add_subdirectory(${lib_src_dir}/nativelib ${lib_build_dir}/native-lib)
+add_subdirectory(${lib_src_dir}/hotfix ${lib_build_dir}/hotfix)
 add_subdirectory(${lib_src_dir}/hawks ${lib_build_dir}/hawks)
