--- a/common/ypose/main/jni/hotfix/CMakeLists.txt
+++ b/common/ypose/main/jni/hotfix/CMakeLists.txt
@@ -10,13 +10,13 @@ cmake_minimum_required(VERSION 3.4.1)
 # You can define multiple libraries, and CMake builds them for you.
 # Gradle automatically packages shared libraries with your APK.
 add_library( # Sets the name of the library.
-        native-lib
+        hotfix
 
         # Sets the library as a shared library.
         SHARED
 
         # Provides a relative path to your source file(s).
-        native-lib.cpp)
+        hotfixmain.cpp hotfixmainv2.c)
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
@@ -31,13 +31,13 @@ find_library( # Sets the name of the path variable.
         # you want CMake to locate.
         log )
 
-target_include_directories(native-lib PRIVATE logutil.h ../hawks/include)
+target_include_directories(hotfix PUBLIC ../hawks/include)
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in this
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-        native-lib
+        hotfix
 
         # Links the target library to the log library
         # included in the NDK.
