--- a/common/build.gradle
+++ b/common/build.gradle
@@ -6,6 +6,11 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlinx-serialization'
 apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/testlib.gradle"
 
+//apply plugin: 'bugly'
+//bugly {
+//    appId = '3d62251014'
+//    appKey = 'a15ecf84-1786-40c6-abf5-fe975fce22e6'
+//}
 def srcDirs = [
         "async",
         "serialization",
@@ -28,7 +33,8 @@ android {
             cmake {
                 cppFlags "-std=c++14"
 //                cppFlags "-std=gnu++11"
-                targets "hawks","hotfix"
+//                targets "hawks","hotfix"
+                abiFilters "arm64-v8a", "armeabi-v7a", "x86","x86_64"   //输出制定三种abi体系结构下的so库
             }
         }
 
@@ -102,6 +108,18 @@ android {
 
         }
     }
+    lintOptions {
+        abortOnError false
+    }
+//    packagingOptions {
+//        pickFirst 'lib/armeabi-v7a/libhotfix.so'
+//        pickFirst 'lib/armeabi-v7a/libhawks.so'
+////        pickFirst 'lib/arm64-v8a/libRSSupport.so'
+////        pickFirst 'lib/x86_64/libRSSupport.so'
+//        pickFirst 'lib/x86/libhotfix.so'
+//        pickFirst 'lib/x86/libhawks.so'
+////        pickFirst 'lib/mips/libRSSupport.so'
+//    }
 }
 
 dependencies {
