--- a/app/build.gradle
+++ b/app/build.gradle
@@ -322,6 +322,9 @@ dependencies {
 
     api 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     api 'com.crashlytics.sdk.android:crashlytics-ndk:2.1.1'
+    //crash and anr
+    api 'com.tencent.bugly:nativecrashreport:3.7.1'
+    api 'com.tencent.bugly:crashreport:3.0.0'
 //    implementation 'com.google.android.gms:play-services-location:16.0.0'
 //    implementation 'com.google.android.gms:play-services-fitness:16.0.1'
     annotationProcessor project(path: ':processor')
