--- a/image/gif/main/cpp/hawks2/CMakeLists.txt
+++ b/image/gif/main/cpp/hawks2/CMakeLists.txt
@@ -10,7 +10,7 @@ cmake_minimum_required(VERSION 3.4.1)
 # You can define multiple libraries, and CMake builds them for you.
 # Gradle automatically packages shared libraries with your APK.
 add_library( # Sets the name of the library.
-        hawks
+        hawks2
         SHARED
         AssetUtil.cpp hawks.cpp)
 
@@ -28,18 +28,21 @@ find_library( # Sets the name of the path variable.
         # you want CMake to locate.
         log )
 
-target_include_directories(hawks PRIVATE ../codec/include)
+target_include_directories(hawks2 PRIVATE ../codec/include)
 
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in this
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-        hawks
+        hawks2
 
         # Links the target library to the log library
         # included in the NDK.
-        gifcodec android z EGL vulkan jnigraphics sync camera2ndk mediandk
+        gifcodec android z EGL  jnigraphics   mediandk
         OpenMAXAL
-        nativewindow
+#        vulkan
+#        sync
+#        camera2ndk
+#        nativewindow
         ${log-lib} )
