--- a/image/gif/main/cpp/gif/CMakeLists.txt
+++ b/image/gif/main/cpp/gif/CMakeLists.txt
@@ -10,9 +10,9 @@ cmake_minimum_required(VERSION 3.4.1)
 # You can define multiple libraries, and CMake builds them for you.
 # Gradle automatically packages shared libraries with your APK.
 add_library( # Sets the name of the library.
-        hawks2
+        gif
         SHARED
-        AssetUtil.cpp hawks.cpp)
+        AssetUtil.cpp gif.cpp)
 
 
 # Searches for a specified prebuilt library and stores the path as a
@@ -28,14 +28,14 @@ find_library( # Sets the name of the path variable.
         # you want CMake to locate.
         log )
 
-target_include_directories(hawks2 PRIVATE ../codec/include)
+target_include_directories(gif PRIVATE ../codec/include)
 
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in this
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-        hawks2
+        gif
 
         # Links the target library to the log library
         # included in the NDK.
