--- a/image/gif/main/cpp/gif/CMakeLists.txt
+++ b/image/gif/main/cpp/gif/CMakeLists.txt
@@ -11,7 +11,7 @@ cmake_minimum_required(VERSION 3.4.1)
 # Gradle automatically packages shared libraries with your APK.
 add_library(gif_jni SHARED
         assetutil.cpp gif_jni.cpp androidmain.cpp
-        GifCodecFromAssets.cpp GifCodecFromUri.cpp GifPlayer.cpp)
+        AssetsGifPlayer.cpp UriGifPlayer.cpp)
 
 
 # Searches for a specified prebuilt library and stores the path as a
