--- a/image/gif/main/cpp/gif/CMakeLists.txt
+++ b/image/gif/main/cpp/gif/CMakeLists.txt
@@ -12,7 +12,7 @@ cmake_minimum_required(VERSION 3.4.1)
 add_library(gif_jni SHARED
         gif_jni.cpp androidmain.cpp
         EventBus.cpp
-        GifPlayer.cpp AssetsGifPlayer.cpp UriGifPlayer.cpp)
+        GifPlayer.cpp)
 
 
 # Searches for a specified prebuilt library and stores the path as a
